# rs-lib-strategy-serde

./: Cargo.toml  README.md  cargo.toml
src/: lib.rs  strategy.rs
