[package]
name = "rs_lib_strategy_serde"
version = "0.1.0"
authors = ["alexandre.mahdhaoui <alexandre.mahdhaoui@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
pretty_assertions = "1"
